--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -6,6 +6,7 @@
   justify-content: center;
   padding: 0 2rem;
   position: relative;
+  overflow-x: clip;
 }
 
 .hero__content {
@@ -20,6 +21,10 @@
 
 .hero__text {
   flex: 1;
+  min-width: 0;
+  overflow: visible;
+  position: relative;
+  z-index: 3;
 }
 
 .hero__image {
@@ -246,17 +251,24 @@
 }
 
 .hero__tagline {
-  font-size: clamp(2rem, 6vw, 3rem);
+  font-size: clamp(1.2rem, 5vw, 3rem);
   font-weight: 100;
   color: var(--color-text-secondary);
-  line-height: 1.1;
+  line-height: 1.3;
   margin-bottom: 1.5rem;
-  min-height: 3.5rem;
+  height: 1.3em;
+  white-space: nowrap;
+  overflow: visible;
+  display: block;
+  width: 100%;
+  position: relative;
+  z-index: 5;
 }
 
 .hero__typewriter {
   color: var(--color-primary);
   font-weight: 600;
+  font-size: inherit;
 }
 
 .hero__cursor {
@@ -324,9 +336,25 @@
     margin-left: 0;
   }
 
+  .hero__earth {
+    width: 70px;
+    height: 70px;
+    top: 46%;
+    left: 42%;
+  }
+
+  .planet-container {
+    width: 70px;
+    height: 70px;
+  }
+
   .hero__cta {
     flex-direction: column;
     align-items: center;
+  }
+
+  .hero__tagline {
+    justify-content: center;
   }
 
   .hero__description {
@@ -347,5 +375,17 @@
     width: 220px;
     height: 220px;
     margin-left: 0;
+  }
+
+  .hero__earth {
+    width: 55px;
+    height: 55px;
+    top: 46%;
+    left: 42%;
+  }
+
+  .planet-container {
+    width: 55px;
+    height: 55px;
   }
 }
